fixed calcudoku sizing on mobile

--- a/src/stylesheets/calcudoku.scss
+++ b/src/stylesheets/calcudoku.scss
@@ -3,6 +3,7 @@
 @use "./home";
 
 $base-dimension: 30em;
+$scaling-420px: 1 / 2;
 
 @mixin puzzle-container($puzzle-size) {
 	$puzzle-dimension: $base-dimension * $puzzle-size/ 4;
@@ -14,6 +15,10 @@ $base-dimension: 30em;
 		display: grid;
 		height: $puzzle-dimension;
 		width: $puzzle-dimension;
+		@media (max-width: 420px) {
+			height: $puzzle-dimension * $scaling-420px;
+			width: $puzzle-dimension * $scaling-420px;
+		}
 		gap: 1px;
 		background-color: black;
 		border: solid 3px;
@@ -26,6 +31,9 @@ $base-dimension: 30em;
 			box-sizing: border-box;
 			padding: 0.5em;
 			border: solid 2px;
+			@media(max-width: 420px){
+				border: solid 2px * $scaling-420px;
+			}
 			cursor: pointer;
 
 			&.active {
@@ -55,6 +63,9 @@ $base-dimension: 30em;
 				width: 100%;
 				height: 100%;
 				font-size: 4em;
+				@media (max-width: 420px) {
+					font-size: 4em * $scaling-420px;
+				}
 				text-align: right;
 				cursor: pointer;
 				&::-webkit-inner-spin-button,
@@ -71,6 +82,9 @@ $base-dimension: 30em;
 
 	div.number-select-container {
 		width: $puzzle-dimension;
+		@media (max-width: 420px) {
+			width: $puzzle-dimension * $scaling-420px;
+		}
 		display: flex;
 		justify-content: space-evenly;
 		padding: 1em;
@@ -78,6 +92,9 @@ $base-dimension: 30em;
 
 		button {
 			font-size: 3em;
+			@media (max-width: 420px) {
+				font-size: 3em * $scaling-420px;
+			}
 			padding: 0.15em 0.5em;
 			cursor: pointer;
 		}
